# minecraft-relay

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml  release.yml
protocol/: Cargo.toml  build.rs
protocol/src/: lib.rs  minecraft-relay.proto
relay/: Cargo.toml
relay/src/: discovery.rs  game.rs  id_map.rs  lib.rs  main.rs  relay.rs
relay/src/game/: connection.rs  listener.rs
relay/src/relay/: connection.rs  listener.rs
