[package]
name = "minecraft-relay"
version = "0.2.0"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-channel = "1.6"
async-io = "1.3"
async-net = "1.5"
bytes = "1.0"
derive_more = "0.99"
env_logger = { version = "0.8", default-features = false, features = ["atty", "humantime", "termcolor"] }
futures-lite = "1.11"
log = "0.4"
minecraft-relay-protocol = { path = "../protocol" }
nom = "6.1"
prost = "0.7"
snow = "0.7"
socket2 = { version = "0.3", features = ["reuseport"] }
thiserror = "1.0"
